2007-07-09  Yevgen Muntyan  <muntyan@tamu.edu>

	* docs/reference/tmpl/stylescheme.sgml:
	document "selection" and "selection-unfocused" styles.

	* gtksourceview/language-specs/c.lang:
	do not highlight "#if0" as "#if 0".

2007-07-06  Paolo Borelli  <pborelli@katamail.com>

	* docs/reference/language-reference.sgml: lang format
	specification updates by thelema@swbell.net.

2007-07-05  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/testdark.xml:
	* gtksourceview/gtksourcestylescheme.c: renamed "text-selected"
	to "selection", and added "selection-unfocused".

	* gtksourceview/language-specs/lua.lang:
	removed <!DOCTYPE language SYSTEM "language.dtd"> bit.

2007-07-05  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/ruby.lang: many improvements
	by Kristoffer Lundén. Bug #419381.

=== gtksourceview 1.90.2 ===

2007-07-03  Paolo Borelli  <pborelli@katamail.com>

	* NEWS:
	* README:
	* configure.ac:

	GtkSourceView 1.90.2 released.

2007-07-03  Paolo Borelli  <pborelli@katamail.com>

	* acinclude.m4: glib 2.13.6 is good enough for gregex.

2007-07-03  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/haddock.lang:
	* gtksourceview/language-specs/haskell.lang:
	* gtksourceview/language-specs/haskell-literate.lang:

	Awesome haskell support by Duncan Coutts. Bug #453278

2007-07-03  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/Makefile.am: run check.sh on make check.
	* gtksourceview/language-specs/check.sh: made it work in make check,
	removed testdark.xml.

	* po/POTFILES.in:
	* po/POTFILES.skip: moved testdark.xml and gregex.c to POTFILES.skip,
	hopefully nobody will add those into POTFILES.in again.

2007-07-03  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/tango.xml: first cut of a
	tango style scheme, contributed by Michael Monreal.

2007-07-03  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/scheme.lang: escape " in strings