@@ -1,3 +1,7 @@
+2007-07-10  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/gtksourcestylescheme.c: add description getter.
+
 2007-07-09  Yevgen Muntyan  <muntyan@tamu.edu>
 
 	* docs/reference/tmpl/stylescheme.sgml:
